# rust_lob

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/engine/: mod.rs  orderbook.rs  tree.rs
backend/src/file_upload/: mod.rs  parser.rs  processor.rs  upload.rs
backend/src/midwares/: app_state.rs  auth.rs  mod.rs
backend/src/order_generator/: gen.rs  mod.rs  upload.rs
backend/src/route_handlers/: mod.rs  sockets.rs  uploads.rs
frontend/: .env  Cargo.toml  Dioxus.toml  build.rs
frontend/assets/: docs.css  home.css  lob.icns  main.css  sample_small_file.txt  sim.css  template.css
frontend/src/: main.rs
frontend/src/components/: accordion.rs  formDialog.rs  mod.rs  modeselect.rs  orderbook.rs  plot.rs  plot_rt.rs  plot_st.rs  priceLvls.rs  results.rs  template.rs  toast.rs  trades.rs
frontend/src/pages/: docs.rs  home.rs  mod.rs  simulator.rs
frontend/src/utils/: auth.rs  enginestats.rs  file_handler.rs  latencyupdate.rs  mod.rs  priceupdate.rs  server.rs  ws_handler.rs
