[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36"
rand = "0.9.0"
rand_distr = "0.5.0"
axum = { version = "0.8.1", features = ["ws"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time"]}
futures-util = "0.3.31"
async-stream = "0.3.6"
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["cors"]}
rmp-serde = "1.3.0"
uuid = { version = "1.14.0", features = ["v4"]}
