[package]
name = "frontend"
version = "0.1.0"
authors = ["kamleshsahoo <kamlesh.sahoo20@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
futures = "0.3.31"
futures-util = "0.3.31"
gloo-net = "0.6.0"
serde = "1.0.217"
serde_json = "1.0.137"
rust_decimal = "1.36"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
